# phantom

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/instructions/: coding-rules.instructions.md  technical-spec.instructions.md  working-rules.instructions.md
src/: editor_ops.rs  lib.rs  main.rs  search.rs
